--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
-body {
+ /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} 
+
+/* .introvideo{
+  height: 100%;
+  width: 100vh;
+  }
+   */
+  video{
+    height: 100%;
+    width: 100%;
+    object-fit:cover;
+
+  }
+  @media screen and (max-width: 600px) {
+  .content{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    line-height: 2%;
+    align-items: flex-start;
+    padding-left: 5%;
+    padding-top: 5%;
+    color: white;
+    /* font-size:250%; */
+  }
+
+  .intro-container {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  
+  }
+  
+  .intro-text {
+    font-size: 10px;
+    color: black;
+    margin-right: 5px;
+  }
+
 }
+@media screen and (min-width: 601px) {
+  .content{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    line-height: 2%;
+    align-items: flex-start;
+    padding-left: 5%;
+    padding-top: 5%;
+    color: white;
+    font-size:250%;
+  }
+
+  .intro-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  
+  
+  }
+  
+  .intro-text {
+    font-size: 20px;
+    color: black;
+    margin-right: 20px;
+  }
+}
+
+  /* .overlay{
+    position:absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,.5);
+  } */
+
+/* 
+   .intro-image {
+    padding: 25px;
+    float: right;
+    height: 100%;
+
+  } */
+
+  /* .intro-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .intro-text {
+    font-size: 20px;
+    color: black;
+    margin-right: 20px;
+  }  */
+
+  .container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .matchcontent {
+    margin-top: 100px;
+  }
+  
+  .image,
+  .image2 {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .image.visible,
+  .image2.visible {
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .image {
+    background-image: url('/myproject/src/assets/team16a.jpeg');
+  }
+  
+  .image2 {
+    background-image: url('/myproject/src/assets/team17a.jpeg');
+  }
+
+  .beforeMatch-image{
+    margin-left: 50px;
+    padding: 10px;
+    margin-right: 50px;
+  }
+  
