--- a/src/index.css
+++ b/src/index.css
@@ -249,4 +249,11 @@ code {
     font-family: 'Lora', serif;
   }
 
+  /* .header{
+  
+    height: 130px;
+    background-color: #AF8C95;
+    position: absolute;
+    } */
+
 
